# ELib

./: apply_app_vue.js  apply_book_actions.js  apply_features.js  apply_frontend.js  dev.md  fix_colors.js  replace.js  setup.js  setup_add_book.js  setup_app.js  setup_backend.js  setup_config.js  setup_features.js  setup_frontend.js  setup_resizer.js  setup_vue.js  setup_vuetable.js  test_bib.rs  test_bib2.rs  test_opener2.rs  test_ureq.rs  test_ureq2.rs
e-lib-pro/: build.ps1  index.html  package-lock.json  package.json  vite.config.ts
e-lib-pro/src/: App.vue  splitpanes.d.ts  store.ts  style.css
e-lib-pro/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
e-lib-pro/src-tauri/capabilities/: default.json
e-lib-pro/src-tauri/src/: commands.rs  commands.rs.test  db.rs  main.rs
e-lib-pro/src/components/: BookDetail.vue  BookTable.vue  TreeView.vue
