[package]
name = "e-lib-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2.0.0"

log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled", "blob"] }
image = "0.24"
biblatex = "0.9.3"
lazy_static = "1.4"
base64 = "0.21"
tauri-plugin-opener = "2.0.0"
open = "5.3.4"
ureq = "3.3.0"









